--- a/plugin/src/main/resources/locales/en-US.json
+++ b/plugin/src/main/resources/locales/en-US.json
@@ -3,6 +3,9 @@
   "error": {
     "invalid-block": "&cYou must be looking at a spawner to use this command",
     "no-target-block": "&cNo target block found",
-    "invalid-entity": "&cInvalid entity type: &7{{entity}}"
-  }
+    "invalid-entity": "&cInvalid entity type &7{{entity}}"
+  },
+  "spawner-type-changed": "&aSpawner type changed to &7{{entity}}",
+  "config-reloaded": "&aConfig reloaded successfully",
+  "config-restored": "&aConfig restored to default"
 }
